[gd_scene load_steps=3 format=3 uid="uid://4it2akw1x6vf"]

[ext_resource type="Script" path="res://addons/cognite/interface/graph_editor.gd" id="1_wtxwf"]
[ext_resource type="Script" path="res://addons/cognite/interface/graph_modus.gd" id="2_fb7w7"]

[node name="GraphEdit" type="GraphEdit"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
right_disconnects = true
use_snap = false
minimap_enabled = false
arrange_nodes_button_hidden = true
script = ExtResource("1_wtxwf")
metadata/_edit_lock_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 273.0
offset_right = 679.0
offset_bottom = 40.0

[node name="select_graphnode" type="OptionButton" parent="HBoxContainer"]
layout_mode = 2
focus_mode = 0
flat = true
item_count = 6
selected = 0
popup/item_0/text = "graphs"
popup/item_0/id = 0
popup/item_0/disabled = true
popup/item_0/separator = true
popup/item_1/text = "Decision"
popup/item_1/id = 1
popup/item_2/text = "Decompose"
popup/item_2/id = 2
popup/item_3/text = "Loop"
popup/item_3/id = 3
popup/item_4/text = "Condition"
popup/item_4/id = 4
popup/item_5/text = "Best match"
popup/item_5/id = 5

[node name="modus" type="GraphNode" parent="."]
layout_mode = 0
offset_left = 117.0
offset_top = 306.0
offset_right = 289.0
offset_bottom = 531.0
mouse_filter = 1
title = "Modus"
position_offset = Vector2(117, 306)
comment = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(0.819608, 0.14902, 0, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(0.819608, 0.14902, 0, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = true
slot/1/right_type = 0
slot/1/right_color = Color(0.823529, 1, 0.941176, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(0.823529, 1, 0.941176, 1)
slot/2/left_icon = null
slot/2/right_enabled = true
slot/2/right_type = 0
slot/2/right_color = Color(0.823529, 1, 0.941176, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = true
slot/3/right_type = 0
slot/3/right_color = Color(0.823529, 1, 0.941176, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color(1, 1, 1, 1)
slot/4/left_icon = null
slot/4/right_enabled = true
slot/4/right_type = 0
slot/4/right_color = Color(0.823529, 1, 0.941176, 1)
slot/4/right_icon = null
slot/4/draw_stylebox = true
slot/5/left_enabled = false
slot/5/left_type = 0
slot/5/left_color = Color(1, 1, 1, 1)
slot/5/left_icon = null
slot/5/right_enabled = true
slot/5/right_type = 0
slot/5/right_color = Color(0.823529, 1, 0.941176, 1)
slot/5/right_icon = null
slot/5/draw_stylebox = true
script = ExtResource("2_fb7w7")

[node name="chipset_selection" type="OptionButton" parent="modus"]
layout_mode = 2
focus_mode = 0
item_count = 3
selected = 0
popup/item_0/text = "Chipset"
popup/item_0/id = 0
popup/item_0/separator = true
popup/item_1/text = "Amethist"
popup/item_1/id = 1
popup/item_2/text = "Sapphire"
popup/item_2/id = 2

[node name="aggressive" type="Label" parent="modus"]
self_modulate = Color(0.823529, 1, 0.941176, 1)
layout_mode = 2
text = "aggressive
"
horizontal_alignment = 2

[node name="defensive" type="Label" parent="modus"]
self_modulate = Color(0.823529, 1, 0.941176, 1)
layout_mode = 2
text = "defensive"
horizontal_alignment = 2

[node name="tatical_aggressive" type="Label" parent="modus"]
self_modulate = Color(0.823529, 1, 0.941176, 1)
layout_mode = 2
text = "tatical_aggressive
"
horizontal_alignment = 2

[node name="tatical_defensive" type="Label" parent="modus"]
self_modulate = Color(0.823529, 1, 0.941176, 1)
layout_mode = 2
text = "tatical_defensive
"
horizontal_alignment = 2

[node name="undecided" type="Label" parent="modus"]
self_modulate = Color(0.823529, 1, 0.941176, 1)
layout_mode = 2
text = "undecided
"
horizontal_alignment = 2

[node name="decisions" type="GraphNode" parent="."]
layout_mode = 0
offset_left = 1554.0
offset_top = 395.0
offset_right = 1664.0
offset_bottom = 475.0
mouse_filter = 1
title = "Decisions"
position_offset = Vector2(1554, 395)
comment = true
slot/0/left_enabled = true
slot/0/left_type = 40
slot/0/left_color = Color(1, 0.901961, 0.443137, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true

[node name="Label" type="Label" parent="decisions"]
layout_mode = 2
text = "append"

[connection signal="connection_request" from="." to="." method="_on_connection_request"]
[connection signal="disconnection_request" from="." to="." method="_on_disconnection_request"]
[connection signal="item_selected" from="HBoxContainer/select_graphnode" to="." method="_on_select_graphnode_item_selected"]
[connection signal="item_selected" from="modus/chipset_selection" to="modus" method="_on_chipset_selection_item_selected"]
